--- a/portfolio-parth/app/core/templates/index.html
+++ b/portfolio-parth/app/core/templates/index.html
@@ -116,6 +116,15 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('core.static', filename='core/css/styles.css') }}">
 
+    <!-- Microsoft Clarity -->
+    <script type="text/javascript">
+        (function (c, l, a, r, i, t, y) {
+            c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+            t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+            y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+        })(window, document, "clarity", "script", "t2k5bt18j9");
+    </script>
+
 </head>
 
 <body>
